[project]
name = "metergraph"
version = "0.2.0"
description = "Fire-and-forget LLM spend capture for Metergraph"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
