[project]
name = "metergraph"
version = "0.1.0"
description = "Fire-and-forget LLM spend capture for Metergraph"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Pioneer Square Labs" }]
keywords = ["llm", "observability", "openai", "anthropic", "gemini", "cost-tracking"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://www.metergraph.dev/"
Repository = "https://github.com/PioneerSquareLabs/metergraphsdk"
Issues = "https://github.com/PioneerSquareLabs/metergraphsdk/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
