[project]
name = "metergraph-server"
version = "0.1.0"
description = "Self-hostable Metergraph server: content-blind LLM cost tracking by function"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary,pool]>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metergraph_server = ["prices.yaml", "migrations/*.sql"]
